# gds-layout-kit

./: .gitignore  README.md  pyproject.toml
docs/: api.md  cli.md  usage.md
examples/: demo.py  gradient_metasurface.py  grating_gradient.py  grating_gradient_dose_test.py  grating_gradient_medium_size_test.py
src/gds_layout_kit/: __init__.py  assembly.py  demo.py  gradient_demo.py  grating.py  grating_demo.py  io.py  metasurface.py  preview.py  primitives.py  transform.py
src/gds_layout_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_grating.py  test_metasurface.py  test_primitives.py  test_roundtrip.py  test_transform.py
