[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-layout-kit"
version = "0.1.0"
description = "A minimal pure-Python GDS layout generation toolkit built on gdstk"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gdstk>=0.9",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
gds-layout-demo = "gds_layout_kit.demo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

